--- a/solutions/res/layout/activity_pdf.xml
+++ b/solutions/res/layout/activity_pdf.xml
@@ -1,3 +1,4 @@
+<!--suppress ALL -->
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -44,4 +45,17 @@
         android:layout_height="match_parent"
         android:visibility="visible"
         android:layout_below="@id/button_bar"/>
+
+    <FrameLayout
+        android:id="@+id/frame_layout"
+        android:layout_width="100dp"
+        android:layout_height="175dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginBottom="5dp"
+        android:layout_marginRight="5dp"
+        android:elevation="10dp" />
+
+
+
 </RelativeLayout>
