--- a/solutions/res/layout/activity_main.xml
+++ b/solutions/res/layout/activity_main.xml
@@ -14,32 +14,32 @@
 
         <Button
             android:id="@+id/button_load_picture"
-            android:layout_width="wrap_content"
             style="?android:attr/buttonBarButtonStyle"
-            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
             android:text="@string/load_picture" />
 
         <Button
             android:id="@+id/button_load_video"
-            android:layout_width="wrap_content"
             style="?android:attr/buttonBarButtonStyle"
-            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
             android:text="@string/load_video" />
 
         <Button
             android:id="@+id/button_start_camera"
-            android:layout_width="wrap_content"
             style="?android:attr/buttonBarButtonStyle"
-            android:layout_height="wrap_content"
+            android:layout_width="92dp"
+            android:layout_height="match_parent"
             android:text="@string/start_camera" />
-    </LinearLayout>
 
-    <Button
-        android:id="@+id/pdf_button"
-        android:layout_width="wrap_content"
-        style="?android:attr/buttonBarButtonStyle"
-        android:layout_height="wrap_content"
-        android:text="Pdf Button" />
+        <Button
+            android:id="@+id/pdf_button"
+            style="?android:attr/buttonBarButtonStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:text="Pdf Button" />
+    </LinearLayout>
 
     <FrameLayout
         android:id="@+id/preview_display_layout"
